tests/analyzer/errors/continue.ray
fn main() {
    b: {
        continue :b
    }

    {
        continue
    }
}
